# packages/aws/lambda/crates/api-generated/src/models/create_registry_request.rs
@@ -1,0 +1,48 @@
+/*
+ * Calculator API
+ *
+ * Simple API for mathematical operations
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+use crate::models;
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
+pub struct CreateRegistryRequest {
+    /// Name of the registry to create
+    #[serde(rename = "name")]
+    pub name: String,
+    /// Sui network to deploy the registry on
+    #[serde(rename = "chain")]
+    pub chain: Chain,
+}
+
+impl CreateRegistryRequest {
+    pub fn new(name: String, chain: Chain) -> CreateRegistryRequest {
+        CreateRegistryRequest {
+            name,
+            chain,
+        }
+    }
+}
+/// Sui network to deploy the registry on
+#[derive(Clone, Copy, Debug, Eq, PartialEq, Ord, PartialOrd, Hash, Serialize, Deserialize)]
+pub enum Chain {
+    #[serde(rename = "devnet")]
+    Devnet,
+    #[serde(rename = "testnet")]
+    Testnet,
+    #[serde(rename = "mainnet")]
+    Mainnet,
+}
+
+impl Default for Chain {
+    fn default() -> Chain {
+        Self::Devnet
+    }
+}
+
